# mvp

./: CLAUDE.md  PyMolDoc.md  README.md  reproduce_hang.py
.claude/: settings.local.json
.claude-plugin/: plugin.json
.claude/agents/: PyMol-Software-Operator.md
agents/: PyMol-Software-Operator.md  napari-image-processing.md  protein-structure-downloader.md
content/docs/: Doc.md  WebsiteMD.md
napari-mcp-plugin/: README.md  pyproject.toml  test_client.py
napari-mcp-plugin/src/napari_mcp/: __init__.py  _executor.py  _socket_server.py  _widget.py  napari.yaml
pymol-mcp-socket-plugin/: __init__.py
skills/napari/: SKILL.md
skills/napari/references/: api.md  modes.md  protocol.md  recipes.md  tools.md
skills/napari/scripts/: apply_filter.py  dump_session.py  launch_napari.py  napari_client.py  screenshot_grid.py
skills/pymol-molecular-visualization/: SKILL.md
skills/pymol-molecular-visualization/scripts/: pymol_launch.py  pymol_send.py
